--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,25 @@
+# Xcode
 .DS_Store
-.dart_tool/
-
-.packages
-.pub/
-
-.idea/
-.vagrant/
-.sconsign.dblite
-.svn/
-*.iml
-*.swp
-*.log
-profile
-
-DerivedData/
-
-.generated/
-
+*/build/*
 *.pbxuser
-*.mode1v3
-*.mode2v3
-*.perspectivev3
-
 !default.pbxuser
+*.mode1v3
 !default.mode1v3
+*.mode2v3
 !default.mode2v3
+*.perspectivev3
 !default.perspectivev3
-
 xcuserdata
-
+profile
 *.moved-aside
+DerivedData
+.idea/
+*.hmap
+*.xccheckout
+*.xcworkspace
+!default.xcworkspace
 
-*.pyc
-*sync/
-Icon?
-.tags*
-
-build/
-.android/
-.ios/
-.flutter-plugins
+#CocoaPods
+Pods
+!Podfile
+!Podfile.lock
